--- a/portfolio.css
+++ b/portfolio.css
@@ -1,21 +1,34 @@
+body {
+  margin: 0;
+  padding: 0;
+  
+}
+
 header {
   display: flex;
   justify-content: flex-end;
 }
 
+nav img {
+  padding-right: 30px;
+}
+
 section {
   background-image: url(Icon/header-illsutration-mobile@2x.png);
   background-size: 100%;
+  background-position: -4px right;
+  background-repeat: no-repeat;
 }
 
-.text {
+.intro {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-h1 {
+.intro h1 {
+  color: #172B4D;
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -25,20 +38,33 @@ h1 {
   margin-top: 130px;
   margin-left: 27px;
   margin-right: 27px;
-  margin-bottom: 7px;
+  margin-bottom: 3px;
 }
 
-span {
+.intro .intro2 {
   color: #36b37e;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding:0;
 }
 
-p {
+.text {
+  color: #172B4D;
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 28px;
   text-align: center;
+  padding: 10px;
+  margin-bottom: 10px;
+  
 }
 
 .icon {
